--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@formkit/auto-animate": "^0.9.0",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
@@ -52,5 +53,14 @@
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ryanvasconcelo/ArcoPortus-Consultoria-Arco.git"
+  },
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/ryanvasconcelo/ArcoPortus-Consultoria-Arco/issues"
+  },
+  "homepage": "https://github.com/ryanvasconcelo/ArcoPortus-Consultoria-Arco#readme"
 }
