--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,6 +8,14 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "typeRoots": [
+      "src/types",
+      "./node_modules/@types"
+    ]
+  },
+  "include": [
+    "src/**/*.ts", // Inclui todos os arquivos .ts dentro da pasta src
+    "src/@types/**/*.d.ts" // Inclui explicitamente nossos arquivos de definição
+  ]
 }
