--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,54 @@
 services:
-  cga_db:
-    image: postgres:latest
-    container_name: arco_portus_postgres_db
-    environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+  # Serviço do Banco de Dados
+  arcoportus_db:
+    image: postgres:15-alpine
+    container_name: arcoportus_postgres_db
+    restart: always
+    env_file:
+      - ./.env # Carrega as variáveis do nosso arquivo .env
     ports:
-      - "5433:5432" # Mapeia a porta 5433 do host para a 5432 do contêiner
+      - "${DB_PORT}:5432" # Usa a porta definida no .env
     volumes:
-      - cga_postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}" ]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+      - arcoportus-data:/var/lib/postgresql/data
+    networks:
+      - arcoportus-net
 
-  backend:
+  # Serviço do Backend
+  arcoportus_backend:
+    container_name: arcoportus_backend_api
     build:
-      context: .
-      dockerfile: Dockerfile.dev
-    container_name: arco_portus_backend_api
+      context: . # Constrói a imagem usando o Dockerfile na pasta atual (backend/)
+    restart: always
+    env_file:
+      - ./.env
     ports:
-      - "3334:3001" # Expõe a porta 3001 do container na 3334 da sua máquina
-      - "5556:5555" # Prisma Studio agora na porta 5556 da sua máquina
-    working_dir: /app
+      - "${BACKEND_PORT}:3334"
     volumes:
-      - .:/app
-      - /app/node_modules
+      - ./src:/app/src # Monta o código-fonte para hot-reloading
     depends_on:
-      cga_db:
-        condition: service_healthy
-    # A mágica acontece aqui: construímos a DATABASE_URL para o container,
-    # usando as variáveis do banco e o nome do serviço 'cga_db' como host.
-    # Isso libera o .env para ser usado por comandos locais (como o seed).
-    environment:
-      DATABASE_URL: "postgresql://${DB_USER}:${DB_PASSWORD}@arco_portus_postgres_db:5432/${DB_NAME}?schema=public"
-      JWT_SECRET: ${JWT_SECRET}
-    restart: unless-stopped
-    command: sh -c "npm install && npx prisma migrate deploy --schema=./backend/prisma/schema.prisma && npx prisma generate --schema=./backend/prisma/schema.prisma && npm run dev"
+      - arcoportus_db # Garante que o DB inicie antes do backend
+    networks:
+      - arcoportus-net
 
-  frontend:
-    image: node:20-alpine
-    container_name: arco_portus_frontend
-    working_dir: /app
+  # Serviço do Frontend
+  arcoportus_frontend:
+    container_name: arcoportus_frontend_ui
+    build:
+      context: ../frontend # Constrói a imagem usando o Dockerfile na pasta frontend/
+    restart: always
     ports:
-      - "5174:5174"
+      - "${FRONTEND_PORT}:5174"
     volumes:
-      - ./frontend:/app
-      - /app/node_modules # Isola o node_modules para evitar conflitos com o host
-    restart: unless-stopped
-    command: sh -c "npm install --legacy-peer-deps && npm run dev"
+      - ../frontend/src:/app/src # Monta o código-fonte para hot-reloading
+    depends_on:
+      - arcoportus_backend
+    networks:
+      - arcoportus-net
 
-# --- DECLARAÇÃO DE VOLUMES ---
-# ESTE BLOCO É CRUCIAL E DEVE TER INDENTAÇÃO ZERO.
-# ELE PRECISA ESTAR NO MESMO NÍVEL DE 'services'.
 volumes:
-  cga_postgres_data:
+  arcoportus-data:
+    driver: local
+
+networks:
+  arcoportus-net:
+    driver: bridge
