--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "prisma": "^6.17.1",
     "zod": "^3.23.8"
@@ -32,6 +33,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.7.2",
     "@types/pg": "^8.15.5",
     "ts-node-dev": "^2.0.0",
