--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "input-otp": "^1.4.2",
     "lovable-tagger": "^1.1.9",
     "lucide-react": "^0.462.0",
+    "multer": "^2.0.2",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -68,6 +69,7 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
