--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "papaparse": "^5.5.3",
     "pg": "^8.16.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -35,7 +37,9 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.7.2",
+    "@types/papaparse": "^5.3.16",
     "@types/pg": "^8.15.5",
+    "@types/xlsx": "^0.0.35",
     "prisma": "^6.17.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
