--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@remixicon/react": "^4.6.0",
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.12.2",
@@ -52,6 +52,7 @@
     "lucide-react": "^0.462.0",
     "multer": "^2.0.2",
     "next-themes": "^0.3.0",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -71,6 +72,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.16.5",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^5.0.3",
