--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.544.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
+    "papaparse": "^5.5.3",
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-parallax-tilt": "^1.7.309",
@@ -44,6 +45,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.5.2",
     "@types/nodemailer": "^7.0.2",
+    "@types/papaparse": "^5.3.16",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.2",
