--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,8 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lovable-tagger": "^1.1.9",
     "lucide-react": "^0.462.0",
     "multer": "^2.0.2",
