--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "multer": "^2.0.2",
     "papaparse": "^5.5.3",
     "pg": "^8.16.3",
+    "sonner": "^2.0.7",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
