--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-parallax-tilt": "^1.7.309",
     "react-router-dom": "^7.9.3",
     "react-tsparticles": "^2.12.2",
+    "sonner": "^2.0.7",
     "tsparticles": "^3.9.1",
     "zod": "^3.23.8"
   },
