--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,21 +1,32 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "NodeNext", /* Mude aqui */
-    "moduleResolution": "NodeNext", /* E aqui */
-    "outDir": "dist",
-    "rootDir": "src",
+    "target": "ES2020",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "lib": [
+      "ES2020"
+    ],
+    "outDir": "./dist",
+    "rootDir": "./src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "types": [
+      "node"
+    ],
     "typeRoots": [
-      "src/types",
-      "./node_modules/@types"
+      "./node_modules/@types",
+      "./src/@types"
     ]
   },
   "include": [
-    "src/**/*.ts", // Inclui todos os arquivos .ts dentro da pasta src
-    "src/@types/**/*.d.ts" // Inclui explicitamente nossos arquivos de definição
+    "src/**/*.ts",
+    "src/@types/**/*.d.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
