fix(auth): correcao do erro 500 no login

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@arcoportus_db:5
 # Variáveis do Backend
 INTERNAL_API_KEY=
 ARCO_PORTUS_JWT_SECRET=
-CGA_INTERNAL_API_URL=http://cga_backend_api:3333/api
+CGA_INTERNAL_API_URL=https://cga.pktech.ai/api
 
 # Portas dos Serviços
 BACKEND_PORT=3335
