--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,12 +13,8 @@
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "types": [
-      "node"
-    ],
     "typeRoots": [
-      "./node_modules/@types",
-      "./src/@types"
+      "./node_modules/@types"
     ]
   },
   "include": [
