--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,8 +13,12 @@
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
+    "types": [
+      "node"
+    ],
     "typeRoots": [
-      "./node_modules/@types"
+      "./node_modules/@types",
+      "./src/@types"
     ]
   },
   "include": [
