--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "lovable-tagger": "^1.1.9",
     "lucide-react": "^0.462.0",
     "multer": "^2.0.2",
