--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,10 +85,14 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
+    "patch-package": "^8.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-musl": "^4.52.5"
   }
 }
